# goojodoq-gg

./: CMakeLists.txt  HeartBeatData  README.md
include/: HeartBeatData.h  analysis.hpp  data.hpp  file_utils.hpp
src/: analysis.cpp  client.cpp  file_utils.cpp  server.cpp
